just some updates to the pokedex

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                                 </ul>
                             </li>
                         </ul>
-                        <form class="d-flex" role="search">
+                        <div class="d-flex" role="search">
                             <input
                                 class="form-control me-2"
                                 type="search"
@@ -105,14 +105,14 @@
                             >
                                 Search
                             </button>
-                        </form>
+                        </div>
                     </div>
                 </div>
             </nav>
         </section>
         <section>
             <div class="card" style="width: 18rem">
-                <img id="pokemonImg" class="card-img-top" />
+                <img id="image" class="card-img-top" />
                 <div class="card-body">
                     <h5 class="card-title" id="name">Name:</h5>
                 </div>
