--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
                 </div>
             </nav>
         </section>
-        <section>
-            <div class="card" style="width: 18rem">
+        <section id="container">
+            <!-- <div class="card" style="width: 18rem">
                 <img id="image" class="card-img-top" />
                 <div class="card-body">
                     <h5 class="card-title" id="name">Name:</h5>
@@ -122,7 +122,7 @@
                     <li class="list-group-item" id="def">Defense</li>
                     <li class="list-group-item" id="type">Type:</li>
                 </ul>
-            </div>
+            </div> -->
         </section>
 
         <script src="index.js"></script>
