--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <body>
         <section>
-            <nav class="navbar navbar-expand-lg bg-light">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="container-fluid">
                     <img
                         class="navbar-brand pkmLogo"
