--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 </div>
             </nav>
         </section>
-        <section id="container" class="container text-center">
+        <section id="container" class="container">
             <!-- <div class="card" style="width: 18rem">
                 <img id="image" class="card-img-top" />
                 <div class="card-body">
