--- a/index.html
+++ b/index.html
@@ -110,7 +110,9 @@
                 </div>
             </nav>
         </section>
-        <section id="container" class="container">
+        <section class="container">
+            <div class="row row-cols" id="container"></div>
+
             <!-- <div class="card" style="width: 18rem">
                 <img id="image" class="card-img-top" />
                 <div class="card-body">
