--- a/firstGen.html
+++ b/firstGen.html
@@ -27,7 +27,8 @@
     <section>
         <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
-                <img class="navbar-brand pkmLogo" src="pokemonlogo.png" alt="" />
+                <h1>Pokemon</h1>
+                <!-- <img class="navbar-brand pkmLogo" src="pokemonlogo.png" alt="" /> -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
