Fixed all the errors now theres just a delay when the buttons are clicked

--- a/firstGen.html
+++ b/firstGen.html
@@ -76,20 +76,10 @@
     </nav>
 
     <section class="container">
-        <div class="row row-cols" id="container"></div>
+        <div class="row row-cols" id="container">
+        </div>
 
-        <!-- <div class="card" style="width: 18rem">
-                <img id="image" class="card-img-top" />
-                <div class="card-body">
-                    <h5 class="card-title" id="name">Name:</h5>
-                </div>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item" id="hp">HP:</li>
-                    <li class="list-group-item" id="att">Attack:</li>
-                    <li class="list-group-item" id="def">Defense</li>
-                    <li class="list-group-item" id="type">Type:</li>
-                </ul>
-            </div> -->
+
     </section>
 
 
