trying to make a search function

--- a/firstGen.html
+++ b/firstGen.html
@@ -20,6 +20,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;800&family=Silkscreen:wght@400;700&display=swap"
         rel="stylesheet" />
+    <script src="firstGen.js" defer></script>
     <title>Document</title>
 </head>
 
@@ -66,7 +67,7 @@
                 </ul>
                 <div class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search for a pokemon"
-                        aria-label="Search" id="searchpokemon" />
+                        aria-label="Search" id="searchpokemon" data-search />
                     <button class="btn btn-outline-primary" type="submit" id="button">
                         Search
                     </button>
@@ -81,9 +82,6 @@
 
 
     </section>
-
-
-    <script src="firstGen.js"></script>
 </body>
 
 </html>
