--- a/firstGen.html
+++ b/firstGen.html
@@ -66,7 +66,7 @@
                     </li>
                 </ul>
                 <div class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search for a pokemon"
+                    <input class="form-control me-2 searchbar" type="search" placeholder="Search for a pokemon"
                         aria-label="Search" id="searchpokemon" data-search />
                     <button class="btn btn-outline-primary" type="submit" id="button">
                         Search
