--- a/fifthGen.html
+++ b/fifthGen.html
@@ -10,7 +10,7 @@
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
-  <!-- CSS only -->
+
   <!-- JavaScript Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
@@ -20,10 +20,12 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;800&family=Silkscreen:wght@400;700&display=swap"
     rel="stylesheet" />
+  <script src="fifthGen.js" defer></script>
   <title>Document</title>
 </head>
 
 <body>
+
   <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <h1>Pokemon</h1>
@@ -33,12 +35,6 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Type
-            </a>
-          </li>
-
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Generation
@@ -67,35 +63,20 @@
           </li>
         </ul>
         <div class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search for a pokemon" aria-label="Search"
-            id="searchpokemon" />
-          <button class="btn btn-outline-primary" type="submit" id="button">
-            Search
-          </button>
+          <input class="form-control me-2 searchbar" type="search" placeholder="Search for a pokemon"
+            aria-label="Search" id="searchpokemon" data-search />
         </div>
       </div>
     </div>
   </nav>
 
   <section class="container">
-    <div class="row row-cols" id="container"></div>
+    <div class="row row-cols" id="container">
 
-    <!-- <div class="card" style="width: 18rem">
-                <img id="image" class="card-img-top" />
-                <div class="card-body">
-                    <h5 class="card-title" id="name">Name:</h5>
-                </div>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item" id="hp">HP:</li>
-                    <li class="list-group-item" id="att">Attack:</li>
-                    <li class="list-group-item" id="def">Defense</li>
-                    <li class="list-group-item" id="type">Type:</li>
-                </ul>
-            </div> -->
+
+
+
   </section>
-
-
-  <script src="fifthGen.js"></script>
 </body>
 
 </html>
