--- a/eighthGen.html
+++ b/eighthGen.html
@@ -20,7 +20,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;800&family=Silkscreen:wght@400;700&display=swap"
     rel="stylesheet" />
-  <script src="firstGen.js" defer></script>
+  <script src="eighthGen.js" defer></script>
   <title>Document</title>
 </head>
 
@@ -82,7 +82,7 @@
 
 
   </section>
-  <script src="thirdGen.js"></script>
+
 </body>
 
 </html>
