--- a/firstGen.html
+++ b/firstGen.html
@@ -60,7 +60,12 @@
                             <li>
                                 <a class="dropdown-item" href="./sixthGen.html">Sixth Generation</a>
                             </li>
-
+                            <li>
+                                <a class="dropdown-item" href="./seventhGen.html">Seventh Generation</a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="./eighthGen.html">Eighth Generation</a>
+                            </li>
                         </ul>
                     </li>
                 </ul>
