--- a/secondGen.html
+++ b/secondGen.html
@@ -20,7 +20,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;800&family=Silkscreen:wght@400;700&display=swap"
     rel="stylesheet" />
-  <script src="firstGen.js" defer></script>
+  <script src="secondGen.js" defer></script>
   <title>Document</title>
 </head>
 
@@ -58,7 +58,12 @@
               <li>
                 <a class="dropdown-item" href="./sixthGen.html">Sixth Generation</a>
               </li>
-
+              <li>
+                <a class="dropdown-item" href="./seventhGen.html">Seventh Generation</a>
+              </li>
+              <li>
+                <a class="dropdown-item" href="./eighthGen.html">Eighth Generation</a>
+              </li>
             </ul>
           </li>
         </ul>
@@ -77,7 +82,7 @@
 
 
   </section>
-  <script src="secondGen.js"></script>
+
 </body>
 
 </html>
