--- a/seventhGen.html
+++ b/seventhGen.html
@@ -10,7 +10,7 @@
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
-  <!-- CSS only -->
+
   <!-- JavaScript Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
@@ -20,7 +20,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;800&family=Silkscreen:wght@400;700&display=swap"
     rel="stylesheet" />
-  <script src="firstGen.js" defer></script>
+  <script src="seventhGen.js" defer></script>
   <title>Document</title>
 </head>
 
@@ -64,6 +64,7 @@
               <li>
                 <a class="dropdown-item" href="./eighthGen.html">Eighth Generation</a>
               </li>
+
             </ul>
           </li>
         </ul>
@@ -82,7 +83,6 @@
 
 
   </section>
-  <script src="thirdGen.js"></script>
 </body>
 
 </html>
