--- a/thirdGen.html
+++ b/thirdGen.html
@@ -41,7 +41,7 @@
             </a>
             <ul class="dropdown-menu">
               <li>
-                <a class="dropdown-item" href="./firstGen.html">First Generation</a>
+                <a class="dropdown-item" href="./index.html">First Generation</a>
               </li>
               <li>
                 <a class="dropdown-item" href="./secondGen.html">Second Generation</a>
