--- a/index.html
+++ b/index.html
@@ -77,8 +77,15 @@
         </div>
     </nav>
 
+    <div id="load-data">
+        <span class="loader"></span>
+    </div>
+
+
     <section class="container">
         <div class="row row-cols" id="container">
+
+
 
 
 
