--- a/index.html
+++ b/index.html
@@ -77,19 +77,11 @@
         </div>
     </nav>
 
-    <div id="load-data">
-        <span class="loader"></span>
-    </div>
+    <div class="classic-1"></div>
 
 
     <section class="container">
         <div class="row row-cols" id="container">
-
-
-
-
-
-
     </section>
 </body>
 
